// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Status /> interactions should show user's plan when subscription module is enabled 1`] = `
<Fragment>
  <InfoModal
    active={false}
    content={
      <p
        className="message"
      >
        LOGOUT_MODAL_CONTENT
      </p>
    }
    handleResponse={[Function]}
    isConfirmationDialog={true}
    toggleModal={[Function]}
  />
  <div
    className="container content flex-wrapper"
    id="status"
  >
    <div
      className="inner flex-row limit-info"
    >
      <div
        className="bg row"
      >
        <h3>
          CURRENT_SUBSCRIPTION_TXT
           
          Free
        </h3>
        <div
          key="Max-Daily-Session"
        >
          <progress
            id="Max-Daily-Session"
            max="10800"
            value={10700}
          />
          <p
            className="progress"
          >
            <strong>
              02:58:20
            </strong>
             
            of
             
            03:00:00
             
            used
          </p>
          <p
            className="exhausted"
          >
            <strong>
              USAGE_LIMIT_EXHAUSTED_TXT
            </strong>
          </p>
        </div>
        <div
          key="Max-Daily-Session-Traffic"
        >
          <progress
            id="Max-Daily-Session-Traffic"
            max="3000000000"
            value={3000000000}
          />
          <p
            className="progress"
          >
            <strong>
              2.79 GB
            </strong>
             
            of
             
            2.79 GB
             
            used
          </p>
          <p
            className="exhausted"
          >
            <strong>
              USAGE_LIMIT_EXHAUSTED_TXT
            </strong>
          </p>
        </div>
        <p>
          <button
            className="button partial"
            id="plan-upgrade-btn"
            onClick={[Function]}
            type="button"
          >
            PLAN_UPGRADE_BTN_TXT
          </button>
        </p>
      </div>
    </div>
    <div
      className="inner"
    >
      <div
        className="main-column"
      >
        <div
          className="inner"
        >
          <p
            className="status-content"
            key="status"
          >
            <label>
              STATUS
              :
            </label>
            <span>
              TRAFFIC_EXHAUSTED
            </span>
          </p>
          <p
            className="status-content"
            key="email"
          >
            <label>
              EMAIL
              :
            </label>
            <span />
          </p>
          <div
            className="row logout"
          >
            <input
              className="button full"
              onClick={[Function]}
              type="button"
              value="LOGOUT"
            />
          </div>
          <div
            className="links row"
            key="/link1.com"
          >
            <Link
              className="button full status-link"
              to="/link1.com"
            >
              link-1
            </Link>
          </div>
          <div
            className="links row"
            key="/link3.com"
          >
            <Link
              className="button full status-link"
              to="/link3.com"
            >
              link-3
            </Link>
          </div>
        </div>
      </div>
      <Connect(Contact) />
    </div>
  </div>
  <div
    className="flex-column"
    id="sessions"
  >
    <loader
      full={false}
      small={true}
    />
  </div>
  <form
    action="http://localhost/"
    className="hidden"
    id="cp-login-form"
    method="post"
    target="owisp-auth-iframe"
  >
    <input
      name="auth_user"
      readOnly={true}
      type="text"
    />
    <input
      name="auth_pass"
      readOnly={true}
      type="text"
    />
    <input
      key="input-zone"
      name="zone"
      readOnly={true}
      type="text"
      value="zone_name"
    />
    <input
      key="input-redirurl"
      name="redirurl"
      readOnly={true}
      type="text"
      value="http://localhost:8080/default/status"
    />
    <input
      key="input-accept"
      name="accept"
      readOnly={true}
      type="text"
      value="accept"
    />
  </form>
  <form
    action="http://localhost:8081"
    className="hidden"
    id="cp-logout-form"
    method="post"
    target="owisp-auth-logout-iframe"
  >
    <input
      name="logout_id"
      readOnly={true}
      type="hidden"
      value=""
    />
    <input
      name="mac_address"
      readOnly={true}
      type="text"
      value="4e:ed:11:2b:17:ae"
    />
  </form>
  <iframe
    className="hidden"
    name="owisp-auth-logout-iframe"
    onLoad={[Function]}
    title="owisp-auth-iframe"
  />
</Fragment>
`;

exports[`<Status /> interactions should show user's plan when subscription module is enabled 2`] = `
<Fragment>
  <InfoModal
    active={false}
    content={
      <p
        className="message"
      >
        LOGOUT_MODAL_CONTENT
      </p>
    }
    handleResponse={[Function]}
    isConfirmationDialog={true}
    toggleModal={[Function]}
  />
  <div
    className="container content flex-wrapper"
    id="status"
  >
    <InfoModal
      active={true}
      content={
        <div
          className="plans "
        >
          <p
            className="intro"
          >
            PLAN_SETTING_TXT
            .
          </p>
          <div
            className="plan"
          >
            <input
              id="radio0"
              name="plan_selection"
              onChange={[Function]}
              tabIndex="0"
              type="radio"
              value="0"
            />
            <label
              htmlFor="radio0"
            >
              <span
                className="title"
              >
                Premium
              </span>
              <span
                className="desc"
              >
                Unlimited time and traffic
              </span>
              <span
                className="price"
              >
                €1.99 per month 
              </span>
            </label>
          </div>
          <div
            className="plan"
          >
            <input
              id="radio1"
              name="plan_selection"
              onChange={[Function]}
              tabIndex="1"
              type="radio"
              value="1"
            />
            <label
              htmlFor="radio1"
            >
              <span
                className="title"
              >
                Premium
              </span>
              <span
                className="desc"
              >
                Unlimited time and traffic
              </span>
              <span
                className="price"
              >
                €9.99 per year 
              </span>
            </label>
          </div>
        </div>
      }
      handleResponse={[Function]}
      id="upgrade-plan-modal"
      isConfirmationDialog={false}
      toggleModal={[Function]}
    />
    <div
      className="inner flex-row limit-info"
    >
      <div
        className="bg row"
      >
        <h3>
          CURRENT_SUBSCRIPTION_TXT
           
          Free
        </h3>
        <div
          key="Max-Daily-Session"
        >
          <progress
            id="Max-Daily-Session"
            max="10800"
            value={10700}
          />
          <p
            className="progress"
          >
            <strong>
              02:58:20
            </strong>
             
            of
             
            03:00:00
             
            used
          </p>
          <p
            className="exhausted"
          >
            <strong>
              USAGE_LIMIT_EXHAUSTED_TXT
            </strong>
          </p>
        </div>
        <div
          key="Max-Daily-Session-Traffic"
        >
          <progress
            id="Max-Daily-Session-Traffic"
            max="3000000000"
            value={3000000000}
          />
          <p
            className="progress"
          >
            <strong>
              2.79 GB
            </strong>
             
            of
             
            2.79 GB
             
            used
          </p>
          <p
            className="exhausted"
          >
            <strong>
              USAGE_LIMIT_EXHAUSTED_TXT
            </strong>
          </p>
        </div>
        <p>
          <button
            className="button partial"
            id="plan-upgrade-btn"
            onClick={[Function]}
            type="button"
          >
            PLAN_UPGRADE_BTN_TXT
          </button>
        </p>
      </div>
    </div>
    <div
      className="inner"
    >
      <div
        className="main-column"
      >
        <div
          className="inner"
        >
          <p
            className="status-content"
            key="status"
          >
            <label>
              STATUS
              :
            </label>
            <span>
              TRAFFIC_EXHAUSTED
            </span>
          </p>
          <p
            className="status-content"
            key="email"
          >
            <label>
              EMAIL
              :
            </label>
            <span />
          </p>
          <div
            className="row logout"
          >
            <input
              className="button full"
              onClick={[Function]}
              type="button"
              value="LOGOUT"
            />
          </div>
          <div
            className="links row"
            key="/link1.com"
          >
            <Link
              className="button full status-link"
              to="/link1.com"
            >
              link-1
            </Link>
          </div>
          <div
            className="links row"
            key="/link3.com"
          >
            <Link
              className="button full status-link"
              to="/link3.com"
            >
              link-3
            </Link>
          </div>
        </div>
      </div>
      <Connect(Contact) />
    </div>
  </div>
  <div
    className="flex-column"
    id="sessions"
  >
    <loader
      full={false}
      small={true}
    />
  </div>
  <form
    action="http://localhost/"
    className="hidden"
    id="cp-login-form"
    method="post"
    target="owisp-auth-iframe"
  >
    <input
      name="auth_user"
      readOnly={true}
      type="text"
    />
    <input
      name="auth_pass"
      readOnly={true}
      type="text"
    />
    <input
      key="input-zone"
      name="zone"
      readOnly={true}
      type="text"
      value="zone_name"
    />
    <input
      key="input-redirurl"
      name="redirurl"
      readOnly={true}
      type="text"
      value="http://localhost:8080/default/status"
    />
    <input
      key="input-accept"
      name="accept"
      readOnly={true}
      type="text"
      value="accept"
    />
  </form>
  <form
    action="http://localhost:8081"
    className="hidden"
    id="cp-logout-form"
    method="post"
    target="owisp-auth-logout-iframe"
  >
    <input
      name="logout_id"
      readOnly={true}
      type="hidden"
      value=""
    />
    <input
      name="mac_address"
      readOnly={true}
      type="text"
      value="4e:ed:11:2b:17:ae"
    />
  </form>
  <iframe
    className="hidden"
    name="owisp-auth-logout-iframe"
    onLoad={[Function]}
    title="owisp-auth-iframe"
  />
</Fragment>
`;

exports[`<Status /> interactions should show user's radius usage 1`] = `
<Fragment>
  <InfoModal
    active={false}
    content={
      <p
        className="message"
      >
        LOGOUT_MODAL_CONTENT
      </p>
    }
    handleResponse={[Function]}
    isConfirmationDialog={true}
    toggleModal={[Function]}
  />
  <div
    className="container content flex-wrapper"
    id="status"
  >
    <div
      className="inner flex-row limit-info"
    >
      <div
        className="bg row"
      >
        <div
          key="Max-Daily-Session"
        >
          <progress
            id="Max-Daily-Session"
            max="10800"
            value={0}
          />
          <p
            className="progress"
          >
            <strong>
              00:00:00
            </strong>
             
            of
             
            03:00:00
             
            used
          </p>
        </div>
        <div
          key="Max-Daily-Session-Traffic"
        >
          <progress
            id="Max-Daily-Session-Traffic"
            max="3000000000"
            value={0}
          />
          <p
            className="progress"
          >
            <strong>
              0
            </strong>
             
            of
             
            2.79 GB
             
            used
          </p>
        </div>
      </div>
    </div>
    <div
      className="inner"
    >
      <div
        className="main-column"
      >
        <div
          className="inner"
        >
          <p
            className="status-content"
            key="STATUS_CONTENT"
          >
            STATUS_CONTENT
          </p>
          <p
            className="status-content"
            key="status"
          >
            <label>
              STATUS
              :
            </label>
            <span>
              LOGGED_IN
            </span>
          </p>
          <p
            className="status-content"
            key="email"
          >
            <label>
              EMAIL
              :
            </label>
            <span />
          </p>
          <div
            className="row logout"
          >
            <input
              className="button full"
              onClick={[Function]}
              type="button"
              value="LOGOUT"
            />
          </div>
          <div
            className="links row"
            key="/link1.com"
          >
            <Link
              className="button full status-link"
              to="/link1.com"
            >
              link-1
            </Link>
          </div>
          <div
            className="links row"
            key="/link3.com"
          >
            <Link
              className="button full status-link"
              to="/link3.com"
            >
              link-3
            </Link>
          </div>
        </div>
      </div>
      <Connect(Contact) />
    </div>
  </div>
  <div
    className="flex-column"
    id="sessions"
  >
    <loader
      full={false}
      small={true}
    />
  </div>
  <form
    action="http://localhost/"
    className="hidden"
    id="cp-login-form"
    method="post"
    target="owisp-auth-iframe"
  >
    <input
      name="auth_user"
      readOnly={true}
      type="text"
    />
    <input
      name="auth_pass"
      readOnly={true}
      type="text"
    />
    <input
      key="input-zone"
      name="zone"
      readOnly={true}
      type="text"
      value="zone_name"
    />
    <input
      key="input-redirurl"
      name="redirurl"
      readOnly={true}
      type="text"
      value="http://localhost:8080/default/status"
    />
    <input
      key="input-accept"
      name="accept"
      readOnly={true}
      type="text"
      value="accept"
    />
  </form>
  <form
    action="http://localhost:8081"
    className="hidden"
    id="cp-logout-form"
    method="post"
    target="owisp-auth-logout-iframe"
  >
    <input
      name="logout_id"
      readOnly={true}
      type="hidden"
      value=""
    />
    <input
      name="mac_address"
      readOnly={true}
      type="text"
      value="4e:ed:11:2b:17:ae"
    />
  </form>
  <iframe
    className="hidden"
    name="owisp-auth-logout-iframe"
    onLoad={[Function]}
    title="owisp-auth-iframe"
  />
</Fragment>
`;

exports[`<Status /> rendering should render correctly 1`] = `
<React.Fragment>
  <InfoModal
    active={false}
    content={
      <p
        className="message"
      >
        LOGOUT_MODAL_CONTENT
      </p>
    }
    handleResponse={[Function]}
    isConfirmationDialog={true}
    toggleModal={[Function]}
  />
  <div
    className="container content flex-wrapper"
    id="status"
  >
    <div
      className="inner flex-row limit-info"
    >
      <div
        className="bg row"
      >
        <loader
          full={false}
          small={true}
        />
      </div>
    </div>
    <div
      className="inner"
    >
      <div
        className="main-column"
      >
        <div
          className="inner"
        >
          <p
            className="status-content"
          >
            STATUS_CONTENT
          </p>
          <p
            className="status-content"
          >
            <label>
              STATUS
              :
            </label>
            <span>
              LOGGED_IN
            </span>
          </p>
          <div
            className="row logout"
          >
            <input
              className="button full"
              onClick={[Function]}
              type="button"
              value="LOGOUT"
            />
          </div>
          <div
            className="links row"
          >
            <Link
              className="button full status-link"
              to="/default/change-password/"
            >
              Change your password
            </Link>
          </div>
        </div>
      </div>
      <Memo(Connect(Contact)) />
    </div>
  </div>
  <div
    className="flex-column"
    id="sessions"
  >
    <loader
      full={false}
      small={true}
    />
  </div>
  <React.Fragment>
    <form
      action="http://localhost/"
      className="hidden"
      id="cp-login-form"
      method="post"
      target="owisp-auth-iframe"
    >
      <input
        name="auth_user"
        readOnly={true}
        type="text"
        value=""
      />
      <input
        name="auth_pass"
        readOnly={true}
        type="text"
        value=""
      />
      <input
        name="zone"
        readOnly={true}
        type="text"
        value="zone_name"
      />
      <input
        name="redirurl"
        readOnly={true}
        type="text"
        value="http://localhost:8080/default/status"
      />
      <input
        name="accept"
        readOnly={true}
        type="text"
        value="accept"
      />
    </form>
    
  </React.Fragment>
  <React.Fragment>
    <form
      action="http://localhost:8081"
      className="hidden"
      id="cp-logout-form"
      method="post"
      target="owisp-auth-logout-iframe"
    >
      <input
        name="logout_id"
        readOnly={true}
        type="hidden"
        value=""
      />
    </form>
    <iframe
      className="hidden"
      name="owisp-auth-logout-iframe"
      onLoad={[Function]}
      title="owisp-auth-iframe"
    />
  </React.Fragment>
</React.Fragment>
`;

exports[`<Status /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<React.Fragment>
  <InfoModal
    active={false}
    content={
      <p
        className="message"
      >
        LOGOUT_MODAL_CONTENT
      </p>
    }
    handleResponse={[Function]}
    isConfirmationDialog={true}
    toggleModal={[Function]}
  />
  <div
    className="container content flex-wrapper"
    id="status"
  >
    <div
      className="inner flex-row limit-info"
    >
      <div
        className="bg row"
      >
        <loader
          full={false}
          small={true}
        />
      </div>
    </div>
    <div
      className="inner"
    >
      <div
        className="main-column"
      >
        <div
          className="inner"
        >
          <p
            className="status-content"
          >
            STATUS_CONTENT
          </p>
          <p
            className="status-content"
          >
            <label>
              STATUS
              :
            </label>
            <span>
              LOGGED_IN
            </span>
          </p>
          <div
            className="row logout"
          >
            <input
              className="button full"
              onClick={[Function]}
              type="button"
              value="LOGOUT"
            />
          </div>
          <div
            className="links row"
          >
            <Link
              className="button full status-link"
              to="/default/change-password/"
            >
              Change your password
            </Link>
          </div>
        </div>
      </div>
      <Memo(Connect(Contact)) />
    </div>
  </div>
  <div
    className="flex-column"
    id="sessions"
  >
    <loader
      full={false}
      small={true}
    />
  </div>
  <React.Fragment>
    <form
      action="http://localhost/"
      className="hidden"
      id="cp-login-form"
      method="post"
      target="owisp-auth-iframe"
    >
      <input
        name="auth_user"
        readOnly={true}
        type="text"
        value=""
      />
      <input
        name="auth_pass"
        readOnly={true}
        type="text"
        value=""
      />
      <input
        name="zone"
        readOnly={true}
        type="text"
        value="zone_name"
      />
      <input
        name="redirurl"
        readOnly={true}
        type="text"
        value="http://localhost:8080/default/status"
      />
      <input
        name="accept"
        readOnly={true}
        type="text"
        value="accept"
      />
    </form>
    
  </React.Fragment>
  <React.Fragment>
    <form
      action="http://localhost:8081"
      className="hidden"
      id="cp-logout-form"
      method="post"
      target="owisp-auth-logout-iframe"
    >
      <input
        name="logout_id"
        readOnly={true}
        type="hidden"
        value=""
      />
    </form>
    <iframe
      className="hidden"
      name="owisp-auth-logout-iframe"
      onLoad={[Function]}
      title="owisp-auth-iframe"
    />
  </React.Fragment>
</React.Fragment>
`;
